package Ejercicio1entrega1;

public class FineDiningRestaurant implements Restaurant {
    @Override
    public void serveCustomers() {
        System.out.println("Offering a fine dining experience.");
    }

    @Override
    public void setServiceStrategy(ThemedServiceStrategy themedServiceStrategy) {

    }
}