package Ejercicio1entrega1;

public interface Restaurant {
    void serveCustomers();

    void setServiceStrategy(ThemedServiceStrategy themedServiceStrategy);


}
