package Ejercicio1entrega1;

// Interfaz para las estrategias de servicio
public interface ServiceStrategy {
    void serve();
}


// Modificación en la clase Restaurant para usar Strategy
